--- a/css/estilo.css
+++ b/css/estilo.css
@@ -30,9 +30,10 @@ thead{
     text-transform: uppercase;  
     background-color: #9d2b16 ;
     color: #ffffff;
+    
   }
   tbody{
-    background-color: #e0a21f;
+    background-color: #93e01f;
     border:2px solid #ffffff;
   }
 
@@ -40,13 +41,14 @@ table{
   position:static;
   background-color: ;
   border: 3px solid darkred;
-  border-radius: 35px;
+  border-radius: 25px;
   margin: 5% auto;
   font-size: 25px;
   width: 65%;
   text-align: center;
   margin-bottom: 20%;
 }
+  
 
 #boton_crear{
   margin: 2% 85%;
@@ -65,13 +67,16 @@ table{
   font-size: large;
   width: 50%;
   padding: 3%;
+
   
 }
 input,select{
   text-align: center;
   width: 50%;
   border-radius: 25px;
-  box-shadow: 2px 2px 4px #9d2b16;
+  box-shadow: 2px 2px 4px #e13b3b;
+  padding: 2%;
+  font-size: 20px;
 }
 #submit{
   border-radius:35px;
@@ -79,6 +84,10 @@ input,select{
   color: #ffffff;
   padding: 2%;
 
+}
+
+#menu2-1f{
+  color: #ffffff;
 }
 
 
